test/libsolidity/syntaxTests/immutable/getter.sol
contract C {
    uint immutable public x;
}
// ----
// UnimplementedFeatureError: NONE
